<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">


        <ImageView
            android:id="@+id/grocery_list_logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Grocery Lists logo"
            app:srcCompat="@drawable/ic_cart_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16sp"
            android:text="@string/unknown_user"
            android:textAppearance="@style/TextAppearance.GroceryList.SubTitle" />

        <Button
            android:id="@+id/to_login_button"
            style="@style/Widget.GroceryList.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grocery_list_textview" />

        <Button
            android:id="@+id/to_register_button"
            style="@style/Widget.GroceryList.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_login_button" />


    </LinearLayout>


</layout>