<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.grocerylists.GroceryListsFragment"
        android:id="@+id/register_scroll_view">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

        <ImageView
            android:id="@+id/squads_logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_register_icon"
            android:contentDescription="Grocery Lists logo"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/register_text"
                android:textAppearance="@style/TextAppearance.GroceryList.SubTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.GroceryList.TextInputLayout"
            android:id="@+id/nameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.GroceryList.TextInputLayout"
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/email"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.GroceryList.TextInputLayout"
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.GroceryList.Button"
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/register_text"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
