<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.grocerylists.CreateGroceryListFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.grocerylist.screens.grocerylists.CreateGroceryListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSecondary"
            android:clickable="true"
            android:scrollbarThumbHorizontal="@color/colorSecondary"
            android:scrollbarThumbVertical="@color/colorSecondary"
            android:theme="@style/Widget.GroceryList.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_home_icon"
            app:title="@string/grocery_list"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

        <ScrollView
            android:id="@+id/create_grocery_list_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_app_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/create_grocery_list_logo"
                    android:layout_width="match_parent"
                    android:layout_height="142dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="Grocery Lists logo"
                    app:srcCompat="@drawable/ic_cart_add_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:text="@string/create_grocery_list_text"
                    android:textAppearance="@style/TextAppearance.GroceryList.SubTitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/grocery_list_name_text_layout"
                    style="@style/Widget.GroceryList.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/grocery_list_name_text"
                    app:nameErrorMessage="@{viewModel.displayError}"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/grocery_list_name_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textVisiblePassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/create_button"
                        style="@style/Widget.GroceryList.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/create_text" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
