<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.grocerylist.screens.grocerylists.GroceryListsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_stats_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/grocery_lists_constraint_layout"
            tools:context="com.example.grocerylist.screens.grocerylists.GroceryListFragment"
            tools:layout_editor_absoluteX="-38dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/back_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorSecondary"
                android:clickable="true"
                android:scrollbarThumbHorizontal="@color/colorSecondary"
                android:scrollbarThumbVertical="@color/colorSecondary"
                android:theme="@style/Widget.GroceryList.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_home_icon"
                app:title="@string/grocery_lists"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_grocery_lists_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_app_bar">

                <EditText
                    android:id="@+id/search_grocery_list_text_field"
                    style="@style/Widget.GroceryList.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:hint="@string/search_grocery_lists"
                    android:inputType="textVisiblePassword"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="@id/create_grocery_list_image"
                    app:layout_constraintEnd_toStartOf="@+id/create_grocery_list_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/create_grocery_list_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/create_grocery_list_text"
                    app:layout_constraintBottom_toBottomOf="@+id/search_grocery_list_text_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_cart_add_icon"
                    android:onClick="@{() -> viewModel.onCreateClicked()}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/groceryLists"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/top_grocery_lists_constraint_layout"
                app:layout_constraintBottom_toTopOf="@+id/refresh_grocery_lists_constraint_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/refresh_grocery_lists_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/refresh_grocery_list_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/refresh_grocery_list_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_refresh_icon"
                    android:onClick="@{() -> viewModel.refreshGroceryLists()}"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
